--- a/public/assets/views/layouts/main.hbs
+++ b/public/assets/views/layouts/main.hbs
@@ -17,38 +17,7 @@
 		<!--<![endif]-->
 		
 		
-		<script type="text/javascript">
-		  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","group","track","ready","alias","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="3.0.1";
-		  
-		  {{#if production}}
-		  	analytics.load("5i39ct45g9");
-		  {{else}}
-		  	// analytics.load('DEV_MODE');
-		  {{/if}}
-		  var email = '{{user.email}}';
-		  window.user = '{{user.id}}';
-		  if(email && email !== '') {
-		  	window.analytics.identify(email);
-		  }
-		  {{#if redirect}}
-		  	analytics.page('{{redirect}}', {path: '{{redirect}}', url: window.location.origin + '{{redirect}}'});
-		  {{/if}}
-		  analytics.page()
-		  }}();
-		</script>
-		
-		{{#if production}}
-		<!-- Start of Async HubSpot Analytics Code -->
-		<script type="text/javascript">
-		  (function(d,s,i,r) {
-		    if (d.getElementById(i)){return;}
-		    var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
-		    n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/423675.js';
-		    e.parentNode.insertBefore(n, e);
-		  })(document,"script","hs-analytics",300000);
-		</script>
-		<!-- End of Async HubSpot Analytics Code -->
-		{{/if}}
+
 		
 	</head>
 	<body>
@@ -75,20 +44,21 @@
 		
 		<!-- AngularJS & Dependencies -->
 		<!--[if lt IE 9]>
-			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular.min.js"></script>
-			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>
-			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.28/angular-cookies.min.js"></script>
+            <script type="text/javascript" src="/assets/js/libs/angular.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular-ui-router.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular-cookies.min.js"></script>
+			<script src="/assets/js/libs/angular-sanitize.min.js"></script>
 		<![endif]-->
 		
 		<!--[if gte IE 9]><!-->
 			<!-- AngularJS & Dependencies -->
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
-			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.13/angular-ui-router.min.js"></script>
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-cookies.min.js"></script>
-			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-sanitize.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular-ui-router.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular-cookies.min.js"></script>
+			<script src="/assets/js/libs/angular-sanitize.min.js"></script>
 		<!--<![endif]-->
 		
-		<!-- Abaris -->
+		<!-- iQlitics -->
 		<script media="screen" src="/assets/js/client.min.js" type="text/javascript"></script>
 		<script media="screen" src="/assets/js/navbar.min.js" type="text/javascript"></script>
 		<script media="screen" src="/assets/js/main.min.js" type="text/javascript"></script>
