--- a/public/assets/views/partials/head.hbs
+++ b/public/assets/views/partials/head.hbs
@@ -1,4 +1,4 @@
-<title ng-bind="title">Abaris | Annuities made easy</title>
+<title ng-bind="title">iQlitics | Making sense of Data</title>
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
