--- a/public/assets/views/partials/navbar.hbs
+++ b/public/assets/views/partials/navbar.hbs
@@ -1,8 +1,8 @@
 			<nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0; border-bottom:1px solid gray; background-color:#FBFBFB; min-height:30px">
-			<a class="navbar-brand">Abaris</a>
+			<a class="navbar-brand">iQlitics</a>
 			<div style="background-color:#FBFBFB; padding: 0px 50px 5px 0px; float: right; font-size: 16px;">
 				<!--<a href="#/login" class="btn btn-primary">Logout</a>-->
-				<a href="#" class="navbar-brand glyphicon glyphicon-user btn btn-default" href="#">&nbsp; Adam Colombo</a>
+				<a href="#" class="navbar-brand glyphicon glyphicon-user btn btn-default" href="#">&nbsp; Divyank Shukla</a>
 			</div>
 		</nav>
 
