adding graphs as a service

--- a/public/assets/views/partials/panelBottomLeft.hbs
+++ b/public/assets/views/partials/panelBottomLeft.hbs
@@ -8,7 +8,7 @@
 				<a data-toggle="collapse" data-parent="#accordion" href="#thirdPanelText"><i class="glyphicon glyphicon-minus" style="padding-right:1em"></i></a>
 				<a href="#" onclick="removeText('thirdPanelText')"><i class="glyphicon glyphicon-remove" style="padding-right:1em"></i></a>
 			</div>
-			<div id="thirdPanelText" class="panel-collapse collapse in">
+			<div ng-controller="barController as controllerBar3" id="thirdPanelText" class="panel-collapse collapse in">
 				This is a third panel of Overall Quote Rank
 			</div>
 		</div>
