--- a/public/assets/views/partials/panelBottomRight.hbs
+++ b/public/assets/views/partials/panelBottomRight.hbs
@@ -8,8 +8,8 @@
 				<a data-toggle="collapse" data-parent="#accordion" href="#fourthPanelText"><i class="glyphicon glyphicon-minus" style="padding-right:1em"></i></a>
 				<a href="#" onclick="removeText('fourthPanelText')"><i class="glyphicon glyphicon-remove" style="padding-right:1em"></i></a>
 			</div>
-			<div id="fourthPanelText" class="panel-collapse collapse in">
-				This is a fourth panel of Overall Quote Rank
+			<div ng-controller="lineController" id="fourthPanelText" class="panel-collapse collapse in">
+				
 			</div>
 		</div>
 	</div>
