--- a/public/assets/views/partials/panelTopLeft.hbs
+++ b/public/assets/views/partials/panelTopLeft.hbs
@@ -8,7 +8,7 @@
 				<a data-toggle="collapse" data-parent="#accordion" href="#firstPanelText"><i class="glyphicon glyphicon-minus" style="padding-right:1em"></i></a>
 				<a href="#" onclick="removeText('firstPanelText')"><i class="glyphicon glyphicon-remove" style="padding-right:1em"></i></a>
 			</div>
-			<div id="firstPanelText" class="panel-collapse collapse in">
+			<div ng-controller="donutController" id="firstPanelText" class="panel-collapse collapse in">
 
 					<p>This is the first panel</p>
 			</div>
