Adding config panel

--- a/public/assets/views/layouts/main.hbs
+++ b/public/assets/views/layouts/main.hbs
@@ -56,6 +56,7 @@
 			<script type="text/javascript" src="/assets/js/libs/angular-ui-router.min.js"></script>
 			<script type="text/javascript" src="/assets/js/libs/angular-cookies.min.js"></script>
 			<script src="/assets/js/libs/angular-sanitize.min.js"></script>
+            <script src="/assets/js/libs/ui-bootstrap-tpls-0.13.0.min.js"></script>
 		<!--<![endif]-->
         
 		<!-- iQlitics -->
