Adding config panel

--- a/public/assets/views/partials/configMenu.hbs
+++ b/public/assets/views/partials/configMenu.hbs
@@ -1,2 +1,88 @@
-<div>
-</div>    
+<nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0; border-bottom:1px solid gray; background-color:#FBFBFB; min-height:30px">
+	<a class="navbar-brand"><span style="text-align:center">Preview Panel</span></a>
+</nav>
+
+<nav class="navbar-default navbar-side" role="navigation">
+	<div class="sidebar-collapse">
+		<div class="nav" id="config-main-menu">
+			<li>
+				<a href="#">Layout</a>
+				<ul class="inner-nav" style="list-style-type:none; text-align:center">
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Add</label>
+						</a>
+						<ul class="inner-nav" style="list-style-type:none; text-align:center">
+					<li>
+						<a href="#">
+							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Donut Chart</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Bar Chart</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Line Chart</label>
+						</a>
+					</li>
+				</ul>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">List</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Config</label>
+						</a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">GRAPH</a>
+				<ul class="inner-nav" style="list-style-type:none; text-align:center">
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Add</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">List</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Config</label>
+						</a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">DATA</a>
+				<ul class="inner-nav" style="list-style-type:none; text-align:center">
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Add</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">List</label>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Config</label>
+						</a>
+					</li>
+				</ul>
+			</li>			
+		</div>
+	</div>
+</nav>
+
