--- a/public/assets/views/partials/navbar.hbs
+++ b/public/assets/views/partials/navbar.hbs
@@ -1,57 +1,50 @@
-			<nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0; border-bottom:1px solid gray; background-color:#FBFBFB; min-height:30px">
-			<a class="navbar-brand">iQlitics</a>
-			<div style="background-color:#FBFBFB; padding: 0px 50px 5px 0px; float: right; font-size: 16px;">
-				<!--<a href="#/login" class="btn btn-primary">Logout</a>-->
-				<a href="#" class="navbar-brand glyphicon glyphicon-user btn btn-default" href="#">&nbsp; Divyank Shukla</a>
-			</div>
-		</nav>
+<nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0; border-bottom:1px solid gray; background-color:#FBFBFB; min-height:30px">
+	<a class="navbar-brand">iQlitics</a>
+	<div style="background-color:#FBFBFB; padding: 0px 50px 5px 0px; float: right; font-size: 16px;">
+		<!--<a href="#/login" class="btn btn-primary">Logout</a>-->
+		<a href="#" class="navbar-brand glyphicon glyphicon-user btn btn-default" href="#">&nbsp; Divyank Shukla</a>
+	</div>
+</nav>
 
-		<!-- /. NAV TOP  -->
-		<nav class="navbar-default navbar-side" role="navigation">
-			<div class="sidebar-collapse">
-				<ul class="nav" id="main-menu">
+<!-- /. NAV TOP  -->
+<nav class="navbar-default navbar-side" role="navigation">
+	<div class="sidebar-collapse">
+		<ul class="nav" id="main-menu">
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-home fa-2x"></i> Dashboard</a>
+				<ul class="inner-nav" style="list-style-type:none; text-align:center">
 					<li>
-						<a href="#"><i class="glyphicon glyphicon-home fa-2x"></i> Dashboard</a>
-						<ul class="inner-nav" style="list-style-type:none">
-							<li>
-								<a href="#">My Dashboard</a>
-							</li>
-							<li>
-								<a href="#">Shared Dashboard</a>
-							</li>
-						</ul>
+
+						<a href="#"><label style="width: 135px; text-align:left; font-size:15px; font-type:normal;">My Dashboard</label></a>
+
 					</li>
 					<li>
-						<a href="#"><i class="glyphicon glyphicon-user fa-1x"></i> User Trends</a>
-					</li>
-					<li>
-						<a href="#"><i class="glyphicon glyphicon-signal fa-1x"></i> Competition</a>
-					</li>
-					<li>
-						<a href="#"><i class="glyphicon glyphicon-time fa-1x"></i> Recent Updates</a>
-					</li>
-					<li>
-						<a href="#"><i class="glyphicon glyphicon-heart-empty fa-1x"></i> Content Engagement</a>
-					</li>
-					<li>
-						<a href="#"><i class="glyphicon glyphicon-record fa-1x"></i> Channel Traffic</a>
-					</li>
-					<li>                          
-                        
-                        <a href="#" ng-click="open('lg')" ng-controller="modalSettingsCtrl"> 
-                            <i class="glyphicon glyphicon-cog fa-1x" ></i> 
-                            Settings
-                        </a>
-                            
-                            
-                        <div ng-show="selected">{{ selected }}</div>
-                        
+
+						<a href="#"><label style="width: 135px; text-align:left; font-size:15px; font-type:normal;">Shared Dashboard</label></a>
+
 					</li>
 				</ul>
+			</li>
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-user fa-1x"></i> User Trends</a>
+			</li>
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-signal fa-1x"></i> Competition</a>
+			</li>
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-time fa-1x"></i> Recent Updates</a>
+			</li>
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-heart-empty fa-1x"></i> Content Engagement</a>
+			</li>
+			<li>
+				<a href="#"><i class="glyphicon glyphicon-record fa-1x"></i> Channel Traffic</a>
+			</li>
+			<li>
+				{{>configForm}}
+			</li>
+		</ul>
+	</div>
 
-			</div>
-
-		</nav>
-		<!-- /. NAV SIDE  -->
-
-
+</nav>
+<!-- /. NAV SIDE  -->
