--- a/public/assets/views/partials/previewPane.hbs
+++ b/public/assets/views/partials/previewPane.hbs
@@ -1,2 +1,18 @@
-<div>
-</div>  
+<div class="panel panel default" style="min-height:200px">
+	<div class="panel-body">
+	<div class="col-sm-8" id="firstPanel">
+	<div class="panel panel-default" style="min-height:310px">
+		<div class="panel-body">
+			{{>configFormDonut}}
+		</div>
+	</div>
+</div>
+	</div>
+</div>
+<div class="panel panel default" style="min-height:200px">
+	<div class="panel-body">
+	<b>Second Panel</b>
+	</div>
+</div>	
+
+ 
