--- a/public/assets/views/layouts/main.hbs
+++ b/public/assets/views/layouts/main.hbs
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		
-		<div id="wrapper" class="active"id="body">
+		<div id="wrapper" class="active" id="body">
 			{{>navbar}}
 
 			<span id="page-content" ui-view autoscroll="true">
@@ -41,6 +41,7 @@
 		
 		<!-- D3 -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+		<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.5/js/bootstrap-modalmanager.min.js"></script>-->
 		
 		<!-- AngularJS & Dependencies -->
 		<!--[if lt IE 9]>
