--- a/public/assets/views/partials/configForm.hbs
+++ b/public/assets/views/partials/configForm.hbs
@@ -1,18 +1,21 @@
-<div class="modal-header">
-    <h3 class="modal-title">Setting Main page!!!</h3>
-</div>
-<div class="modal-body">
-    <div class="row"  >
-        <span ng-include="'/assets/views/partials/configMenu.hbs'"></span>
-        <span ng-include="'/assets/views/partials/previewPane.hbs'"></span>
-             
-        
-    </div>
-    <div class="row" ng-include="'/assets/views/partials/colHeaders.hbs'">
-        
-    </div>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+<a href="#" data-toggle="modal" data-target="#myModal">
+	<i class="glyphicon glyphicon-cog fa-1x"></i> Settings
+</a>
+<div id="myModal" data-backdrop="false" class="modal" role="dialog">
+	<div id="main-menu" class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-body" style="padding:0px">
+				<div id="wrapper">
+					{{>configMenu}}
+					<div id="page-wrapper">
+						{{>previewPane}}
+						<div class="modal-footer">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+							<button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
