adding ng-route

--- a/public/assets/views/partials/configMenu.hbs
+++ b/public/assets/views/partials/configMenu.hbs
@@ -6,29 +6,12 @@
 	<div class="sidebar-collapse">
 		<div class="nav" id="config-main-menu">
 			<li>
-				<a href="#">Layout</a>
+				<a href="#">LAYOUT</a>
 				<ul class="inner-nav" style="list-style-type:none; text-align:center">
 					<li>
 						<a href="#">
 							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Add</label>
 						</a>
-						<ul class="inner-nav" style="list-style-type:none; text-align:center">
-					<li>
-						<a href="#">
-							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Donut Chart</label>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Bar Chart</label>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Line Chart</label>
-						</a>
-					</li>
-				</ul>
 					</li>
 					<li>
 						<a href="#">
@@ -49,6 +32,23 @@
 						<a href="#">
 							<label style="width: 180px; text-align:left; font-size:15px; font-type:normal;">Add</label>
 						</a>
+						<ul class="inner-nav" style="list-style-type:none; text-align:center">
+							<li>
+								<a href="#assets/views/partials/configFormDonut.hbs">
+									<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Donut Chart</label>
+								</a>
+							</li>
+							<li>
+								<a href="#assets/views/partials/configFormBar.hbs">
+									<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Bar Chart</label>
+								</a>
+							</li>
+							<li>
+								<a href="#assets/views/partials/configFormLine.hbs">
+									<label style="width: 150px; text-align:left; font-size:15px; font-type:normal;">Line Chart</label>
+								</a>
+							</li>
+						</ul>
 					</li>
 					<li>
 						<a href="#">
@@ -81,8 +81,7 @@
 						</a>
 					</li>
 				</ul>
-			</li>			
+			</li>
 		</div>
 	</div>
 </nav>
-
