--- a/public/assets/views/partials/previewPane.hbs
+++ b/public/assets/views/partials/previewPane.hbs
@@ -1,18 +1,22 @@
 <div class="panel panel default" style="min-height:200px">
 	<div class="panel-body">
-	<div class="col-sm-8" id="firstPanel">
-	<div class="panel panel-default" style="min-height:310px">
-		<div class="panel-body">
-			{{>configFormDonut}}
+		<div class="col-sm-8">
+			<div class="panel panel-default" style="min-height:310px">
+				<div class="panel-body">
+					<div ng-view></div>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
 	</div>
 </div>
 <div class="panel panel default" style="min-height:200px">
 	<div class="panel-body">
-	<b>Second Panel</b>
+		<div class="col-sm-8">
+			<div class="panel panel-default" style="min-height:310px">
+				<div class="panel-body">
+					<p>Second Panel</p>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>	
-
- 
+</div>
