--- a/public/assets/views/layouts/main.hbs
+++ b/public/assets/views/layouts/main.hbs
@@ -56,6 +56,7 @@
 			<script type="text/javascript" src="/assets/js/libs/angular.min.js"></script>
 			<script type="text/javascript" src="/assets/js/libs/angular-ui-router.min.js"></script>
 			<script type="text/javascript" src="/assets/js/libs/angular-cookies.min.js"></script>
+			<script type="text/javascript" src="/assets/js/libs/angular-route.min.js"></script>
 			<script src="/assets/js/libs/angular-sanitize.min.js"></script>
             <script src="/assets/js/libs/ui-bootstrap-tpls-0.13.0.min.js"></script>
 		<!--<![endif]-->
@@ -67,6 +68,7 @@
 		<script media="screen" src="/assets/js/donut.min.js" type="text/javascript"></script>
 		<script media="screen" src="/assets/js/barChart.min.js" type="text/javascript"></script>
 		<script media="screen" src="/assets/js/lineChart.min.js" type="text/javascript"></script>
+		<script media="screen" src="/assets/js/configFormController.min.js" type="text/javascript"></script>
 
 	</body>
 </html>
